# virtual_assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  lint.sh  main.py  plan.txt  pyproject.toml  requirements.txt  test.py
pkg/: config.py  conversation.py  conversational_ai.py  streaming_stt.py  streaming_tts.py  utils.py  virtual_assistant.py
pkg/ai/: app.py  call_state_machines.py  main.py  va.py
pkg/ai/aec/: mic_disabler_during_speech.py  speexdsp_ctypes.py
pkg/ai/models/: aec_wrapper.py  aspd_detector.py  stt_model.py  tts_model.py  ttt_model.py  utils.py
pkg/ai/models/stt/: faster_whisper_model.py  main.py  stt_interface.py  stt_local.py  stt_model_selector.py  stt_remote.py  wave_to_vec.py  whisper.py
pkg/ai/models/tts/: main.py  tts_interface.py  tts_local.py  tts_remote.py
pkg/ai/models/ttt/: main.py  ttt_interface.py  ttt_local.py  ttt_model_selector.py  ttt_remote.py
pkg/ai/monitoring/: queue_monitoring.py
pkg/ai/streams/: acousting_echo_canceller.py  flow.py
pkg/ai/streams/processor/: aspd_stream_processor.py  dispatcher.py  helper.py  remote_audio_consumer.py  remote_audio_producer.py  stt_stream_processor.py  tts_stream_processor.py  ttt_stream_processor.py
pkg/model_clients/: stt_model.py  tts_model.py  ttt_model.py  vad_model.py
pkg/streams/: local_stt_stream_processor.py  local_tts_stream_processor.py  local_ttt_stream_processor.py  local_voice_stream_ingestor.py  voice_stream_ingestor.py
pkg/voice_app/: aec_worker.py  app.py  aspd_worker.py  input_audio_stream.py  output_audio_stream.py
tests/integration/: test_conversation.py  test_virtual_assistant.py
tests/unit/: test_aec_enabled_audio_io.py  test_aec_enabled_audio_io_hypothesis.py  test_conversational_ai.py  test_streaming_stt.py  test_streaming_tts.py
(+8 files in other folders)
